# Data15Group3

./: .gitignore  pyproject.toml
rag/src/: main.py
rag/src/components/: chat_interface.py
rag/src/utils/: resume_processor.py
