[tool.poetry]
name = "data15group3"
version = "0.1.0"
description = ""
authors = ["Zhaoyu GUO <zhaoyuguo1998@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
